--- a/index.html
+++ b/index.html
@@ -353,19 +353,19 @@
     </div>
 
     <div class="stats-grid" id="statsGrid" style="display: none;">
-      <div class="stat-card">
+      <div class="stat-card" hidden="">
         <div class="stat-number" id="totalSiswa">0</div>
         <div class="stat-label">Total Siswa</div>
       </div>
-      <div class="stat-card">
+      <div class="stat-card" hidden="">
         <div class="stat-number" id="hadirHari">0</div>
         <div class="stat-label">Hadir Hari Ini</div>
       </div>
-      <div class="stat-card">
+      <div class="stat-card" hidden="">
         <div class="stat-number" id="terlambatHari">0</div>
         <div class="stat-label">Terlambat</div>
       </div>
-      <div class="stat-card">
+      <div class="stat-card" hidden="">
         <div class="stat-number" id="pulangAwal">0</div>
         <div class="stat-label">Pulang Awal</div>
       </div>
@@ -594,3 +594,4 @@
   </script>
 </body>
 </html>
+
