--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
           <option value="Kelas 2">📚 Kelas 2</option>
           <option value="Kelas 3A">📚 Kelas 3A</option>
           <option value="Kelas 3B">📚 Kelas 3B</option>
-          <option value="Kelas 4A">📚 Kelas 4A/option>
+          <option value="Kelas 4A">📚 Kelas 4A</option>
            <option value="Kelas 4B">📚 Kelas 4B</option>
           <option value="Kelas 5">📚 Kelas 5</option>
           <option value="Kelas 6">📚 Kelas 6</option>
@@ -596,5 +596,6 @@
   </script>
 </body>
 </html>
+
 
 
